# rlisp

./: Cargo.toml  LICENSE  README.md
cl/: Cargo.toml
cl/src/: creator.rs  data_control.rs  eval_comp.rs  lib.rs  list.rs  math.rs  pack.rs  string.rs  symb.rs
env/: Cargo.toml
env/src/: block.rs  dyn_var.rs  env.rs  env_trait.rs  lambda.rs  lib.rs  named_lambda.rs  ordinary_lambda_list.rs  pack.rs  result.rs  symb.rs  var.rs
err/: Cargo.toml
err/src/: err.rs  lib.rs
eval/: Cargo.toml
eval/src/: evaluator.rs  lib.rs  named_ds_bind.rs  zipper.rs
expr/: Cargo.toml
expr/src/: atom.rs  bool.rs  comma.rs  cons.rs  expr.rs  lib.rs  list.rs  nil.rs  qexpr.rs  sexpr.rs  string.rs  symb.rs  t.rs
hash/: Cargo.toml
hash/src/: hash.rs  lib.rs
lex/: Cargo.toml
lex/src/: cl_symbs.rs  data_control_symbs.rs  eval_comp_symbs.rs  lexer.rs  lib.rs  list_symbs.rs  math_symbs.rs  symb_symbs.rs  symbol_creator.rs
pars/: Cargo.toml
pars/src/: data_control_params.rs  eval_comp_params.rs  lib.rs  list_params.rs  param_creator.rs  param_generator.rs  parser.rs  string_params.rs
pars_symb/: Cargo.toml
pars_symb/src/: lib.rs  symbol.rs  token.rs
rlisp/: Cargo.toml
rlisp/src/: main.rs
