[package]
name = "eval"
version = "0.0.0"

rust-version.workspace = true
edition.workspace = true

[dependencies]
# local crates
cl.workspace = true
env.workspace = true
err.workspace  = true
expr.workspace = true
hash.workspace = true
pars_symb.workspace = true
pars.workspace = true

# non-local crates
rand.workspace = true